--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ main {
   grid-column: 2 / span 2;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: calc(800rem / 16)) {
   body {
     grid-template-columns: repeat(6, 1fr);
     width: 100%;
@@ -77,6 +77,7 @@ h1.underline {
   color: #eee;
   position: relative;
   width: fit-content;
+  white-space: nowrap;
 }
 
 .underline::after {
